--- a/app.html
+++ b/app.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./utility.css">
     <title>Spotify - Web Player: Music for everyone</title>
 </head>
 
@@ -25,7 +25,7 @@
 
             <div class="library bg-grey rounded m-1 p-1">
                 <div class="heading">
-                    <img class="invert" src="img/playlist.svg" alt="">
+                    <img class="invert" src="./img/playlist.svg" alt="">
                     <h2>
                         Your Library
                     </h2>
@@ -70,8 +70,8 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <!-- <button class="signupbtn">Sign up</button>
-                    <button class="loginbtn">Log in</button> -->
+                    <button class="signupbtn">Sign up</button>
+                    <button class="loginbtn">Log in</button>
                 </div>
             </div>
             <div class="spotifyPlaylists">
@@ -112,7 +112,7 @@
             </div>
         </div>
     </div>
-    <script src="lol.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
